Final update night

--- a/app/src/main/res/xml/method.xml
+++ b/app/src/main/res/xml/method.xml
@@ -9,7 +9,7 @@
     <!-- Add default system subtype so we can properly set the icon and label -->
     <subtype
         android:label="@string/azhagi_app_name"
-        android:icon="@mipmap/floris_app_icon"
+        android:icon="@mipmap/azhagi_app_icon"
         android:imeSubtypeMode="keyboard"
         android:imeSubtypeExtraValue="AsciiCapable"
         android:isAsciiCapable="true"
